icp-backend/celery/service-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
 name: celerysvc 
spec:
 replicas: 1
 template:
   metadata:
     name: celerysvc
     labels:
       app: celerysvc
   spec:
     containers:
       - name: celerysvc
         image: "mycluster.icp:8500/default/celery:0.0.1" 
         imagePullPolicy: Always
         resources:
          requests:
            cpu: "80m"
            memory: "100Mi"
          limits:
            cpu: "100"
            memory: "150Mi"
         ports:
         - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
 name: celerysvc
 labels:
   app: celerysvc
spec:
 type: ClusterIP
 selector:
   app: celerysvc
 ports:
  - protocol: TCP
    name: celerysvc
    port: 4000
    targetPort: 4000
