icp-backend/celery/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: test
spec:
  hosts:
  - 10.150.20.151
  - smtp.gmail.com
  ports:
  - number: 30554
    name: http
    protocol: HTTPS
  - number: 465
    name:  smtp
    protocol: SMTPS
  - number: 587
    name:  tls
  - number: 443
    name:  ssl
  - number: 8080
    name:  ssl1
  - number: 25
    name:  s
  location: MESH_EXTERNAL
